amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.1:
  ADD: New Playlist Browser, organizes multiple playlists, and offers smart
       playlist functionality.
  ADD: Support for redirected streams and streams with no specified port.
  ADD: KIO support for GStreamer engine. Allows playing media via all
       protocols supported by KIO (ftp, audiocd, fish, etc). 
  ADD: SearchBrowser operation can now be aborted.
  ADD: XineEngine plugin, audio only
  ADD: Progressbar in CollectionBrowser informs about scan progress, and a
       button was added for aborting the scan. (BR 83019)
  ADD: Playlist sliders (volume and position) now move directly when clicked
       outside of the handle. (BR 83611) 
  ADD: Tagless tracks now go into Collection too, listed as "unknown".
  ADD: Automatic album cover fetching is back and improved.
  ADD: Option for automatically switching to Context when playback is started.
  CHG: Stream timeout value is now determined from KDE user settings.
  ADD: Support for password-protected streams, by wef <javapojken@yahoo.se>. 
  FIX: GStreamer engine must not allow non-audio filetypes in playlist.
  ADD: Icon for "Menu" button in toolbar. Improves Usability.

VERSION 1.0.2:
  FIX: aRts-engine: Streams sometimes stopping shortly after playback was
       started. (BR 84417)
  CHG: Increased stream connect timeout to 12 seconds.
  
VERSION 1.0.1:
  FIX: Short dropouts after starting a stream with GStreamer.
  FIX: amaroK starting invisible when systray icon is disabled.
  FIX: Playlist analyzer looks freaky on some systems. (BR 83671)
  FIX: Display filename in title column for wav files. (BR 83650)
  FIX: Don't show crash dialog when no engine plugins are found.
  FIX: Compile issue for KDE < 3.2.1 users. Sorry :(

VERSION 1.0:
  FIX: Plugin versions are validated. Prevents crashes with ancient plugins.
  FIX: Configure now checks for gtk/gdk headers for the XMMSwrapper.